--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -41,8 +41,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-T3PGS5G
 LastExecutedLaunchName=DESKTOP-T3PGS5G
 
@@ -69,7 +69,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -93,7 +93,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1290.000 Y=730.000
+WindowSize=X=1320.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -606,5 +606,315 @@ CrashTracker.TimeStamp=2016.12.20-04.11.47
 CrashTracker.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2016.12.20-04.11.53
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+Hauberk.TimeStamp=2016.12.20-05.47.34
+Hauberk.LastCompileMethod=External
+DungeonArchitectRuntime.TimeStamp=2016.12.20-04.29.55
+DungeonArchitectRuntime.LastCompileMethod=Unknown
+DungeonArchitectEditor.TimeStamp=2016.12.20-04.29.52
+DungeonArchitectEditor.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2016.12.20-04.12.10
+MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintProfiler.TimeStamp=2016.12.20-04.11.56
+BlueprintProfiler.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2016.12.20-04.11.56
+BlueprintGraph.LastCompileMethod=Unknown
+
+[DetailCategories]
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
+ThirdPersonCharacter_C.Default=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.Replication=True
+REINST_ThirdPersonCharacter_C_35.TransformCommon=True
+REINST_ThirdPersonCharacter_C_35.Animation=True
+REINST_ThirdPersonCharacter_C_35.Mesh=True
+REINST_ThirdPersonCharacter_C_35.Clothing=True
+REINST_ThirdPersonCharacter_C_35.Physics=True
+REINST_ThirdPersonCharacter_C_35.Collision=True
+REINST_ThirdPersonCharacter_C_35.Lighting=True
+REINST_ThirdPersonCharacter_C_35.Rendering=True
+REINST_ThirdPersonCharacter_C_35.Tags=True
+REINST_ThirdPersonCharacter_C_35.Activation=True
+REINST_ThirdPersonCharacter_C_35.Cooking=True
+REINST_ThirdPersonCharacter_C_35.Character Movement (General Settings)=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Walking=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Jumping / Falling=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Swimming=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Flying=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Custom Movement=True
+REINST_ThirdPersonCharacter_C_35.Character Movement (Rotation Settings)=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Physics Interaction=True
+REINST_ThirdPersonCharacter_C_35.Character Movement (Networking)=True
+REINST_ThirdPersonCharacter_C_35.Character Movement=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Avoidance=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: NavMesh Movement=True
+REINST_ThirdPersonCharacter_C_35.NavMovement=True
+REINST_ThirdPersonCharacter_C_35.Velocity=True
+REINST_ThirdPersonCharacter_C_35.PlanarMovement=True
+REINST_ThirdPersonCharacter_C_35.MovementComponent=True
+REINST_ThirdPersonCharacter_C_35.Shape=True
+REINST_ThirdPersonCharacter_C_35.Navigation=True
+REINST_ThirdPersonCharacter_C_35.Character=True
+REINST_ThirdPersonCharacter_C_35.Camera=True
+REINST_ThirdPersonCharacter_C_35.Pawn=True
+REINST_ThirdPersonCharacter_C_35.Input=True
+REINST_ThirdPersonCharacter_C_35.Actor=True
+ThirdPersonCharacter_C.Lock On=True
+REINST_ThirdPersonCharacter_C_35.None=True
+REINST_ThirdPersonCharacter_C_35.Tick=True
+REINST_ThirdPersonCharacter_C_35.Replication=True
+REINST_ThirdPersonCharacter_C_39.None=True
+REINST_ThirdPersonCharacter_C_39.Tick=True
+REINST_ThirdPersonCharacter_C_39.Camera=True
+REINST_ThirdPersonCharacter_C_39.Lock On=True
+REINST_ThirdPersonCharacter_C_39.Character=True
+REINST_ThirdPersonCharacter_C_39.Pawn=True
+REINST_ThirdPersonCharacter_C_39.Rendering=True
+REINST_ThirdPersonCharacter_C_39.Replication=True
+REINST_ThirdPersonCharacter_C_39.Input=True
+REINST_ThirdPersonCharacter_C_39.Actor=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+REINST_ThirdPersonCharacter_C_50.TransformCommon=True
+REINST_ThirdPersonCharacter_C_50.Animation=True
+REINST_ThirdPersonCharacter_C_50.Mesh=True
+REINST_ThirdPersonCharacter_C_50.Lock On=True
+REINST_ThirdPersonCharacter_C_50.Physics=True
+REINST_ThirdPersonCharacter_C_50.Clothing=True
+REINST_ThirdPersonCharacter_C_50.Collision=True
+REINST_ThirdPersonCharacter_C_50.Lighting=True
+REINST_ThirdPersonCharacter_C_50.Rendering=True
+REINST_ThirdPersonCharacter_C_50.Tags=True
+REINST_ThirdPersonCharacter_C_50.Activation=True
+REINST_ThirdPersonCharacter_C_50.Cooking=True
+REINST_ThirdPersonCharacter_C_50.Character Movement (General Settings)=True
+REINST_ThirdPersonCharacter_C_50.Character Movement: Walking=True
+REINST_ThirdPersonCharacter_C_50.Character Movement: Jumping / Falling=True
+REINST_ThirdPersonCharacter_C_50.Character Movement: Swimming=True
+REINST_ThirdPersonCharacter_C_50.Character Movement: Flying=True
+REINST_ThirdPersonCharacter_C_50.Character Movement: Custom Movement=True
+REINST_ThirdPersonCharacter_C_50.Character Movement (Rotation Settings)=True
+REINST_ThirdPersonCharacter_C_50.Character Movement: Physics Interaction=True
+REINST_ThirdPersonCharacter_C_50.Character Movement (Networking)=True
+REINST_ThirdPersonCharacter_C_50.Character Movement=True
+REINST_ThirdPersonCharacter_C_50.Character Movement: Avoidance=True
+REINST_ThirdPersonCharacter_C_50.Character Movement: NavMesh Movement=True
+REINST_ThirdPersonCharacter_C_50.NavMovement=True
+REINST_ThirdPersonCharacter_C_50.Velocity=True
+REINST_ThirdPersonCharacter_C_50.PlanarMovement=True
+REINST_ThirdPersonCharacter_C_50.MovementComponent=True
+REINST_ThirdPersonCharacter_C_50.Shape=True
+REINST_ThirdPersonCharacter_C_50.Navigation=True
+REINST_ThirdPersonCharacter_C_50.Character=True
+REINST_ThirdPersonCharacter_C_50.Camera=True
+REINST_ThirdPersonCharacter_C_50.Pawn=True
+REINST_ThirdPersonCharacter_C_50.Input=True
+REINST_ThirdPersonCharacter_C_50.Actor=True
+REINST_ThirdPersonCharacter_C_54.TransformCommon=True
+REINST_ThirdPersonCharacter_C_54.Animation=True
+REINST_ThirdPersonCharacter_C_54.Mesh=True
+REINST_ThirdPersonCharacter_C_54.Lock On=True
+REINST_ThirdPersonCharacter_C_54.Physics=True
+REINST_ThirdPersonCharacter_C_54.Clothing=True
+REINST_ThirdPersonCharacter_C_54.Collision=True
+REINST_ThirdPersonCharacter_C_54.Lighting=True
+REINST_ThirdPersonCharacter_C_54.Rendering=True
+REINST_ThirdPersonCharacter_C_54.Tags=True
+REINST_ThirdPersonCharacter_C_54.Activation=True
+REINST_ThirdPersonCharacter_C_54.Cooking=True
+REINST_ThirdPersonCharacter_C_54.Character Movement (General Settings)=True
+REINST_ThirdPersonCharacter_C_54.Character Movement: Walking=True
+REINST_ThirdPersonCharacter_C_54.Character Movement: Jumping / Falling=True
+REINST_ThirdPersonCharacter_C_54.Character Movement: Swimming=True
+REINST_ThirdPersonCharacter_C_54.Character Movement: Flying=True
+REINST_ThirdPersonCharacter_C_54.Character Movement: Custom Movement=True
+REINST_ThirdPersonCharacter_C_54.Character Movement (Rotation Settings)=True
+REINST_ThirdPersonCharacter_C_54.Character Movement: Physics Interaction=True
+REINST_ThirdPersonCharacter_C_54.Character Movement (Networking)=True
+REINST_ThirdPersonCharacter_C_54.Character Movement=True
+REINST_ThirdPersonCharacter_C_54.Character Movement: Avoidance=True
+REINST_ThirdPersonCharacter_C_54.Character Movement: NavMesh Movement=True
+REINST_ThirdPersonCharacter_C_54.NavMovement=True
+REINST_ThirdPersonCharacter_C_54.Velocity=True
+REINST_ThirdPersonCharacter_C_54.PlanarMovement=True
+REINST_ThirdPersonCharacter_C_54.MovementComponent=True
+REINST_ThirdPersonCharacter_C_54.Shape=True
+REINST_ThirdPersonCharacter_C_54.Navigation=True
+REINST_ThirdPersonCharacter_C_54.Character=True
+REINST_ThirdPersonCharacter_C_54.Camera=True
+REINST_ThirdPersonCharacter_C_54.Pawn=True
+REINST_ThirdPersonCharacter_C_54.Input=True
+REINST_ThirdPersonCharacter_C_54.Actor=True
+REINST_ThirdPersonCharacter_C_58.TransformCommon=True
+REINST_ThirdPersonCharacter_C_58.Animation=True
+REINST_ThirdPersonCharacter_C_58.Mesh=True
+REINST_ThirdPersonCharacter_C_58.Lock On=True
+REINST_ThirdPersonCharacter_C_58.Physics=True
+REINST_ThirdPersonCharacter_C_58.Clothing=True
+REINST_ThirdPersonCharacter_C_58.Collision=True
+REINST_ThirdPersonCharacter_C_58.Lighting=True
+REINST_ThirdPersonCharacter_C_58.Rendering=True
+REINST_ThirdPersonCharacter_C_58.Tags=True
+REINST_ThirdPersonCharacter_C_58.Activation=True
+REINST_ThirdPersonCharacter_C_58.Cooking=True
+REINST_ThirdPersonCharacter_C_58.Character Movement (General Settings)=True
+REINST_ThirdPersonCharacter_C_58.Character Movement: Walking=True
+REINST_ThirdPersonCharacter_C_58.Character Movement: Jumping / Falling=True
+REINST_ThirdPersonCharacter_C_58.Character Movement: Swimming=True
+REINST_ThirdPersonCharacter_C_58.Character Movement: Flying=True
+REINST_ThirdPersonCharacter_C_58.Character Movement: Custom Movement=True
+REINST_ThirdPersonCharacter_C_58.Character Movement (Rotation Settings)=True
+REINST_ThirdPersonCharacter_C_58.Character Movement: Physics Interaction=True
+REINST_ThirdPersonCharacter_C_58.Character Movement (Networking)=True
+REINST_ThirdPersonCharacter_C_58.Character Movement=True
+REINST_ThirdPersonCharacter_C_58.Character Movement: Avoidance=True
+REINST_ThirdPersonCharacter_C_58.Character Movement: NavMesh Movement=True
+REINST_ThirdPersonCharacter_C_58.NavMovement=True
+REINST_ThirdPersonCharacter_C_58.Velocity=True
+REINST_ThirdPersonCharacter_C_58.PlanarMovement=True
+REINST_ThirdPersonCharacter_C_58.MovementComponent=True
+REINST_ThirdPersonCharacter_C_58.Shape=True
+REINST_ThirdPersonCharacter_C_58.Navigation=True
+REINST_ThirdPersonCharacter_C_58.Character=True
+REINST_ThirdPersonCharacter_C_58.Camera=True
+REINST_ThirdPersonCharacter_C_58.Pawn=True
+REINST_ThirdPersonCharacter_C_58.Input=True
+REINST_ThirdPersonCharacter_C_58.Actor=True
+REINST_ThirdPersonCharacter_C_62.TransformCommon=True
+REINST_ThirdPersonCharacter_C_62.Animation=True
+REINST_ThirdPersonCharacter_C_62.Mesh=True
+REINST_ThirdPersonCharacter_C_62.Lock On=True
+REINST_ThirdPersonCharacter_C_62.Physics=True
+REINST_ThirdPersonCharacter_C_62.Clothing=True
+REINST_ThirdPersonCharacter_C_62.Collision=True
+REINST_ThirdPersonCharacter_C_62.Lighting=True
+REINST_ThirdPersonCharacter_C_62.Rendering=True
+REINST_ThirdPersonCharacter_C_62.Tags=True
+REINST_ThirdPersonCharacter_C_62.Activation=True
+REINST_ThirdPersonCharacter_C_62.Cooking=True
+REINST_ThirdPersonCharacter_C_62.Character Movement (General Settings)=True
+REINST_ThirdPersonCharacter_C_62.Character Movement: Walking=True
+REINST_ThirdPersonCharacter_C_62.Character Movement: Jumping / Falling=True
+REINST_ThirdPersonCharacter_C_62.Character Movement: Swimming=True
+REINST_ThirdPersonCharacter_C_62.Character Movement: Flying=True
+REINST_ThirdPersonCharacter_C_62.Character Movement: Custom Movement=True
+REINST_ThirdPersonCharacter_C_62.Character Movement (Rotation Settings)=True
+REINST_ThirdPersonCharacter_C_62.Character Movement: Physics Interaction=True
+REINST_ThirdPersonCharacter_C_62.Character Movement (Networking)=True
+REINST_ThirdPersonCharacter_C_62.Character Movement=True
+REINST_ThirdPersonCharacter_C_62.Character Movement: Avoidance=True
+REINST_ThirdPersonCharacter_C_62.Character Movement: NavMesh Movement=True
+REINST_ThirdPersonCharacter_C_62.NavMovement=True
+REINST_ThirdPersonCharacter_C_62.Velocity=True
+REINST_ThirdPersonCharacter_C_62.PlanarMovement=True
+REINST_ThirdPersonCharacter_C_62.MovementComponent=True
+REINST_ThirdPersonCharacter_C_62.Shape=True
+REINST_ThirdPersonCharacter_C_62.Navigation=True
+REINST_ThirdPersonCharacter_C_62.Character=True
+REINST_ThirdPersonCharacter_C_62.Camera=True
+REINST_ThirdPersonCharacter_C_62.Pawn=True
+REINST_ThirdPersonCharacter_C_62.Input=True
+REINST_ThirdPersonCharacter_C_62.Actor=True
+REINST_ThirdPersonCharacter_C_66.TransformCommon=True
+REINST_ThirdPersonCharacter_C_66.Animation=True
+REINST_ThirdPersonCharacter_C_66.Mesh=True
+REINST_ThirdPersonCharacter_C_66.Lock On=True
+REINST_ThirdPersonCharacter_C_66.Physics=True
+REINST_ThirdPersonCharacter_C_66.Clothing=True
+REINST_ThirdPersonCharacter_C_66.Collision=True
+REINST_ThirdPersonCharacter_C_66.Lighting=True
+REINST_ThirdPersonCharacter_C_66.Rendering=True
+REINST_ThirdPersonCharacter_C_66.Tags=True
+REINST_ThirdPersonCharacter_C_66.Activation=True
+REINST_ThirdPersonCharacter_C_66.Cooking=True
+REINST_ThirdPersonCharacter_C_66.Character Movement (General Settings)=True
+REINST_ThirdPersonCharacter_C_66.Character Movement: Walking=True
+REINST_ThirdPersonCharacter_C_66.Character Movement: Jumping / Falling=True
+REINST_ThirdPersonCharacter_C_66.Character Movement: Swimming=True
+REINST_ThirdPersonCharacter_C_66.Character Movement: Flying=True
+REINST_ThirdPersonCharacter_C_66.Character Movement: Custom Movement=True
+REINST_ThirdPersonCharacter_C_66.Character Movement (Rotation Settings)=True
+REINST_ThirdPersonCharacter_C_66.Character Movement: Physics Interaction=True
+REINST_ThirdPersonCharacter_C_66.Character Movement (Networking)=True
+REINST_ThirdPersonCharacter_C_66.Character Movement=True
+REINST_ThirdPersonCharacter_C_66.Character Movement: Avoidance=True
+REINST_ThirdPersonCharacter_C_66.Character Movement: NavMesh Movement=True
+REINST_ThirdPersonCharacter_C_66.NavMovement=True
+REINST_ThirdPersonCharacter_C_66.Velocity=True
+REINST_ThirdPersonCharacter_C_66.PlanarMovement=True
+REINST_ThirdPersonCharacter_C_66.MovementComponent=True
+REINST_ThirdPersonCharacter_C_66.Shape=True
+REINST_ThirdPersonCharacter_C_66.Navigation=True
+REINST_ThirdPersonCharacter_C_66.Character=True
+REINST_ThirdPersonCharacter_C_66.Camera=True
+REINST_ThirdPersonCharacter_C_66.Pawn=True
+REINST_ThirdPersonCharacter_C_66.Input=True
+REINST_ThirdPersonCharacter_C_66.Actor=True
+
+[DetailPropertyExpansion]
+ThirdPersonCharacter_C=
+BaseCharacter=
+Character=
+Pawn=
+REINST_ThirdPersonCharacter_C_50="\"Object.Camera.CameraArm\" \"Object.Camera.CameraArm.Object.Camera\" \"Object.Camera.CameraArm.Object.CameraCollision\" \"Object.Camera.CameraArm.Object.CameraSettings\" \"Object.Camera.PlayerCamera\" "
+REINST_ThirdPersonCharacter_C_54="\"Object.Camera.PlayerCamera\" \"Object.Camera.PlayerCamera.Object.CameraSettings\" "
+REINST_ThirdPersonCharacter_C_58="\"Object.Camera.CameraArm\" \"Object.Camera.CameraArm.Object.Camera\" \"Object.Camera.CameraArm.Object.CameraCollision\" \"Object.Camera.CameraArm.Object.CameraSettings\" "
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 
 
